--- a/todo_Rest/pom.xml
+++ b/todo_Rest/pom.xml
@@ -94,5 +94,16 @@
             <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.ws</groupId>
+            <artifactId>jakarta.xml.ws-api</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-rt</artifactId>
+            <version>2.3.2</version> <!-- or the version compatible with your environment -->
+        </dependency>
+
     </dependencies>
 </project>
