--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     ports:
       - "5435:5432"
     volumes:
+      - db_data:/var/lib/postgresql/data
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
 
   adminer:
@@ -17,3 +18,6 @@ services:
     restart: always
     ports:
       - "8089:8080"
+
+volumes:
+  db_data:
